cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj11_TupleStruct_1.plcfunc
FUNCTION proj11_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj11_TupleStruct_1 := tuple.field11;
END_FUNCTION
